# eye_tracked_robot_arm

./: .gitignore  README.md
docker/: Dockerfile  build.bash  ros_entrypoint.sh  run_image.bash
package_ws/src/: eye.repos
robot_ws/src/gaze_controller/: CMakeLists.txt  package.xml
robot_ws/src/gaze_controller/gaze_controller/: bounding_box.py  gaze_controller.py  point_in_polygon.py
robot_ws/src/gaze_controller/include/gaze_controller/: arm_controller.hpp  gaze_to_world_coordinates.hpp
robot_ws/src/gaze_controller/launch/: calibration.launch.py  camera.launch.py
robot_ws/src/gaze_controller/params/: tag_params.yaml
robot_ws/src/gaze_controller/src/: arm_controller.cpp  gaze_to_world_coordinates.cpp
robot_ws/src/gaze_controller/test/: inside_polygon_test.py
robot_ws/src/tobii_driver/: CMakeLists.txt  package.xml
robot_ws/src/tobii_driver/include/: CameraCalibrator.hpp  EyeTracking.hpp  tobii_camera.hpp  tobii_gaze.hpp  tobii_gaze_node.hpp
robot_ws/src/tobii_driver/launch/: tobii_driver.launch.py
robot_ws/src/tobii_driver/src/: CameraCalibrator.cpp  EyeTracking.cpp  tobii_camera.cpp  tobii_gaze.cpp  tobii_gaze_node.cpp
ur_ws/src/: moveit_support.repos
